final fix of the bugs + rewrite some register method